{
  "version": 4,
  "terraform_version": "1.12.0",
  "serial": 115,
  "lineage": "f01f206b-56f5-d5d6-41d8-b14fa429bccf",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lambda_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:830822993936:security-group/sg-050dada197c9fe600",
            "description": "Security group para lambdas",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "id": "sg-050dada197c9fe600",
            "ingress": [],
            "name": "lambda-sg",
            "name_prefix": "",
            "owner_id": "830822993936",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "lambda-security-group"
            },
            "tags_all": {
              "Name": "lambda-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-05bd500ecf63b9641"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.example"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "registrar_usuario_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:830822993936:security-group/sg-017677041fc586b93",
            "description": "Security group for registrar_usuario lambda",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-017677041fc586b93",
            "ingress": [],
            "name": "registrar-usuario-sg",
            "name_prefix": "",
            "owner_id": "830822993936",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "registrar-usuario-sg"
            },
            "tags_all": {
              "Name": "registrar-usuario-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-05bd500ecf63b9641"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.example"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.dynamodb_endpoint",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "dynamodb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:830822993936:vpc-endpoint/vpce-0a2f7ffb7b8ef28c0",
            "cidr_blocks": [
              "35.71.70.0/24",
              "3.218.182.0/24",
              "3.218.180.0/23",
              "35.71.68.0/23",
              "52.94.0.0/22",
              "52.119.224.0/20"
            ],
            "id": "vpce-0a2f7ffb7b8ef28c0",
            "owner_id": "830822993936",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-02cd2c6b",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-08c5102da5f1c3fe6"
            ],
            "service_name": "com.amazonaws.us-east-1.dynamodb",
            "service_region": "us-east-1",
            "state": "available",
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-05bd500ecf63b9641"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.example",
            "module.vpc.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:830822993936:route-table/rtb-08c5102da5f1c3fe6",
            "id": "rtb-08c5102da5f1c3fe6",
            "owner_id": "830822993936",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "club-sports-vpc-mica-route-table"
            },
            "tags_all": {
              "Name": "club-sports-vpc-mica-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-05bd500ecf63b9641"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "club-sports-vpc-mica-subnet-1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02294ddb03cf20b2c",
            "route_table_id": "rtb-08c5102da5f1c3fe6",
            "subnet_id": "subnet-04149d8f7178ebe1a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.example",
            "module.vpc.aws_subnet.example",
            "module.vpc.aws_vpc.example"
          ]
        },
        {
          "index_key": "club-sports-vpc-mica-subnet-2",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b210115f84f916ee",
            "route_table_id": "rtb-08c5102da5f1c3fe6",
            "subnet_id": "subnet-0fec43ba4f36baaa5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.example",
            "module.vpc.aws_subnet.example",
            "module.vpc.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "club-sports-vpc-mica-subnet-1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:830822993936:subnet/subnet-04149d8f7178ebe1a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04149d8f7178ebe1a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "830822993936",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "club-sports-vpc-mica-subnet-1"
            },
            "tags_all": {
              "Name": "club-sports-vpc-mica-subnet-1"
            },
            "vpc_id": "vpc-05bd500ecf63b9641"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.example"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "club-sports-vpc-mica-subnet-2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:830822993936:subnet/subnet-0fec43ba4f36baaa5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fec43ba4f36baaa5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "830822993936",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "club-sports-vpc-mica-subnet-2"
            },
            "tags_all": {
              "Name": "club-sports-vpc-mica-subnet-2"
            },
            "vpc_id": "vpc-05bd500ecf63b9641"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.example"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:830822993936:vpc/vpc-05bd500ecf63b9641",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0893e527196296697",
            "default_route_table_id": "rtb-054c7f8b6f85f9531",
            "default_security_group_id": "sg-062508eea55a09a68",
            "dhcp_options_id": "dopt-067d2fd835beba386",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-05bd500ecf63b9641",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-054c7f8b6f85f9531",
            "owner_id": "830822993936",
            "tags": {
              "Name": "club-sports-vpc-mica"
            },
            "tags_all": {
              "Name": "club-sports-vpc-mica"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    }
  ]
}